--- a/Different_themes/Learn_JavaEE/src/main/webapp/WEB-INF/web.xml
+++ b/Different_themes/Learn_JavaEE/src/main/webapp/WEB-INF/web.xml
@@ -3,9 +3,17 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
+
   <display-name>Archetype Created Web Application</display-name>
+
   <servlet>
     <servlet-name>FirstServlet</servlet-name>
     <servlet-class>FirstServlet</servlet-class>
   </servlet>
+
+  <servlet-mapping>
+    <servlet-name>FirstServlet</servlet-name>
+    <url-pattern>/welcome</url-pattern>
+  </servlet-mapping>
+
 </web-app>
